# syzkaller-osfuzz

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  syz-executor
executor/: CMakeLists.txt  common.h  common_linux.h  cov_ipt.h  cov_ipt_filter.h  executor.cc  executor_linux.h
pkg/bitmap/: bitmap.go
pkg/csource/: generated.go
pkg/diffmap/: diff_map.go  diff_region.go
pkg/host/: features.go  features_linux.go
pkg/instance/: instance.go
pkg/ipc/: gate.go  ipc.go
pkg/ipc/ipcconfig/: ipcconfig.go
pkg/mgrconfig/: config.go
pkg/osutil/: osutil.go
pkg/runtest/: run.go
pkg/tool/: tool.go
prog/: encodingexec.go
sys/syz-sysgen/: sysgen.go
sys/targets/: targets.go
syz-fuzzer/: fuzzer.go  fuzzer_test.go  proc.go  testing.go
syz-manager/: manager.go  rpc.go
tools/syz-execprog/: execprog.go
tools/syz-runtest/: runtest.go
vm/qemu/: qemu.go
vm/vmimpl/: util.go
